# fhp-inflation-expectation-replication

./: .gitignore  README.org  angeletos.py  create_data.py  create_figures_and_tables.sh  estimate_model.py  fig_FHP_AHS.py  fig_FHP_CG.py  fig_FHP_KW.py  fig_FHP_mdd.py  fig_FHP_scatter.py  fig_SI_AHS.py  fig_SI_CG_KW.py  fig_scatter.py  fig_tab_FHP_variance_freq_domain.py  fig_tab_partial_equilibrium.py  figures.py  fullsample.txt  fullsample_with_1q_inflation_expectations.txt  fullsample_with_4q_inflation_expectations.txt  meyer_gohde_interface.f90  pyproject.toml  tab_CG_regression.py  tab_FHP_posterior.py  tab_SI_posterior.py  tab_partial_equilibrium.py  test_estimations.sh
models/: finite_horizon.yaml  partial_equilibrium.yaml  sticky_information.yaml
